--- a/public/css/app.scss
+++ b/public/css/app.scss
@@ -28,6 +28,34 @@ body {
     a {
         text-decoration: none;
     }
+    form {
+        line-height: 150%;
+        input {
+            outline: none;
+            font-family: "Raleway", sans-serif;
+            background-color: #FFF;
+            color: #3B445B;
+            font-size: 0.5em;
+            font-weight: bold;
+            border: 2px solid #3B445B;;
+            border-radius: 6px;
+            padding: 5px 5px 5px 15px;
+            transition: transform 0.3s;
+            &:hover {
+                transform: translateY(-4px);
+            }
+        }
+        input[type='submit'] {
+            border: none;
+            padding: 5px;
+            background-color: #3B445B;
+            width: 120px;
+            color: #FFF;
+            &:hover {
+                cursor: pointer;
+            }
+        }
+    }
 }
 
 footer {
