--- a/app/views/errors/error500.twig
+++ b/app/views/errors/error500.twig
@@ -6,9 +6,9 @@
 
     <span class="header"></span>
 
-    <div class="block-center">
+    <div style="margin-top: 80px;" class="">
         <h1>Error 500 : Internal server error</h1>
-        <span>
+        <span style="font-family: 'Courier New'; font-size: 0.80em;">
             {% if(exception == false) %}
                 Unexpected error... <br>
                 An error occurred and your request couldn't be completed. Please try again.
