Correctifs mineur sur l'ajout d'une page Database pour l'exemple

--- a/app/views/db.twig
+++ b/app/views/db.twig
@@ -4,17 +4,17 @@
 
 {% block body %}
 
-<div class="block-center">
-    <h1>Test database</h1>
-</div>
+    <div class="block-center">
+        <h1>Test database</h1>
+    </div>
 
-<div class="block_table">
-{% for key, bookmark in bookmarks %}
+    <div class="block_table">
+        {% for key, bookmark in bookmarks %}
 
-#{{ bookmark.id }} <a href="http://{{ bookmark.url }}">{{ bookmark.nom }}</a><br/>
+            #{{ bookmark.id }} <a href="http://{{ bookmark.url }}">{{ bookmark.nom }}</a>
+            <br/>
 
-{% endfor %}
-</div>
+        {% endfor %}
+    </div>
 
 {% endblock %}
-
