--- a/app/views/test.twig
+++ b/app/views/test.twig
@@ -4,9 +4,13 @@
 
 {% block body %}
 
-    <div class="block-center">
-        <h1>Test validator</h1>
-        <span><a href="{{ path('homePage') }}">Back to home page</a></span>
+    <span class="headerBar"></span>
+
+    <div class="container">
+        <div class="bds-title">
+            <h1>Test validator</h1>
+            <span><a href="{{ path('homePage') }}">Back to home page</a></span>
+        </div>
     </div>
 
 {% endblock %}
