--- a/app/views/errors/error404.twig
+++ b/app/views/errors/error404.twig
@@ -4,19 +4,22 @@
 
 {% block body %}
 
-    <span class="header"></span>
+    <span class="headerBar"></span>
 
-    <div class="block-center">
-        <h1>Error 404 : Page not found</h1>
-        <span>
-            We looked everywhere for this page. <br>
-            Are you sure the website url is correct ? <br>
-            If problem persist, please get in touch the site owner.
-        </span>
+    <div class="container">
+        <div class="bds-title">
+            <h1>Error 404 : Page not found</h1>
+            <br>
+            <span>
+                We looked everywhere for this page. <br>
+                Are you sure the website url is correct ? <br>
+                If problem persist, please get in touch the site owner.
+            </span>
+        </div>
     </div>
 
-    <footer>
-        <span>BDS Version 1.0 | 2017</span>
+    <footer class="footer">
+        <span class="text-center">BDS Framework | Version 1.0 | 2017</span>
     </footer>
 
 {% endblock %}
