--- a/app/views/errors/error503.twig
+++ b/app/views/errors/error503.twig
@@ -4,17 +4,20 @@
 
 {% block body %}
 
-    <span class="header"></span>
+    <span class="headerBar"></span>
 
-    <div class="block-center">
-        <h1>Error 503 : Service Unavailable</h1>
-        <span>
-            Service temporarily unavailable or in maintenance.
-        </span>
+    <div class="container">
+        <div class="bds-title">
+            <h1>Error 503 : Service Unavailable</h1>
+            <br>
+            <span>
+                Service temporarily unavailable or in maintenance.
+            </span>
+        </div>
     </div>
 
-    <footer>
-        <span>BDS Version 1.0 | 2017</span>
+    <footer class="footer">
+        <span class="text-center">BDS Framework | Version 1.0 | 2017</span>
     </footer>
 
 {% endblock %}
