--- a/app/views/globals/default.twig
+++ b/app/views/globals/default.twig
@@ -3,43 +3,44 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="fkeloks">
 
     <title>{% block title %}BDS Framework{% endblock %}</title>
 
-    <link rel="icon" type="image/png" href="{{ assets('favicon.png') }}" />
+    <link rel="icon" type="image/png" href="{{ assets('favicon.png') }}"/>
+    {% block css %}
+        <link rel="stylesheet" href="{{ assets('css/bootstrap.min.css') }}">
+        <link rel="stylesheet" href="{{ assets('css/app.css') }}" type="text/css">
 
-    {%  block css %}
-    <link href="https://fonts.googleapis.com/css?family=Raleway:100,600" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="{{ assets('css/app.css') }}" type="text/css">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+        <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
     {% endblock %}
-
 </head>
-
 <body>
 
-{% block body %}
-    <span class="header"></span>
+    {% block body %}
+        <span class="headerBar"></span>
 
-    <div class="block-center">
-        <h1>BDS Framework</h1>
-        <span>An easy-to-use framework, by Florian B</span>
-    </div>
+        <div class="container">
+            <div class="bds-title">
+                <h1>BDS Framework</h1>
+                <span>An easy-to-use framework, by Florian B</span>
+            </div>
+        </div>
 
-    <footer>
-        <span>BDS Version 1.0 | 2017</span>
-    </footer>
-{% endblock %}
+        <footer class="footer">
+            <span class="text-center">BDS Framework | Version 1.0 | 2017</span>
+        </footer>
+    {% endblock %}
 
-{% block js %}{% endblock %}
-
+    {% block js %}
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+        <script src="{{ assets('js/bootstrap.min.js') }}"></script>
+    {% endblock %}
 </body>
 </html>
