--- a/public/css/app.scss
+++ b/public/css/app.scss
@@ -1,86 +1,54 @@
+
 body {
-    font-family: "Raleway", sans-serif;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
     background-color: #ecf9f8;
     margin: 0;
     overflow: hidden;
+    a {
+        text-transform: none;
+        color: inherit;
+    }
 }
 
-.header {
+.headerBar {
     position: absolute;
     z-index: -5;
-    top: -35px;
+    top: -40px;
+    left: -5px;
     background-color: #3B445B;
     width: 120%;
     height: 100px;
     transform: rotate(-2deg);
 }
 
-.block-center {
-    margin-top: 7%;
+.bds-title {
+    margin-top: 15%;
     color: #3B445B;
     text-align: center;
-    font-size: 1.8em;
-    height: 250px;
-    width: 85%;
-    a {
-        text-decoration: none;
+    h1, h2, h3 {
+        font-size: 2.2em;
     }
-    form {
-        line-height: 150%;
-        input {
-            outline: none;
-            font-family: "Raleway", sans-serif;
-            background-color: #FFF;
-            color: #3B445B;
-            font-size: 0.5em;
-            font-weight: bold;
-            border: 2px solid #3B445B;;
-            border-radius: 6px;
-            padding: 5px 5px 5px 15px;
-            transition: transform 0.3s;
-            &:hover {
-                transform: translateY(-4px);
-            }
-        }
-        input[type='submit'] {
-            border: none;
-            padding: 5px;
-            background-color: #3B445B;
-            width: 120px;
-            color: #FFF;
-            &:hover {
-                cursor: pointer;
-            }
-        }
+    p, span {
+        font-size: 1.9em;
     }
 }
 
-.block_table {
-    width: 90%;
-    a {
-        text-decoration: none;
-    }
-}
-
-footer {
+.footer {
     position: fixed;
-    bottom: 20px;
-    width: 600px;
-    height: 45px;
-    font-size: 2em;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    font-size: 1.4em;
     color: #3B445B;
     text-align: center;
 }
 
 @media (max-width: 768px) {
-    .header {
+    .headerBar {
         margin-top: 0;
-        height: 45px;
+        height: 60px;
     }
-    .block-center, footer {
+    .footer {
         font-size: 1.1em;
     }
 }
